--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.669.0",
     "aws-sdk": "^2.1691.0",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
